WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235472
[GTK][a11y] Emit children-changed:remove signal even for ignored objects with ATSPI
https://bugs.webkit.org/show_bug.cgi?id=235472
Summary
[GTK][a11y] Emit children-changed:remove signal even for ignored objects with...
Carlos Garcia Campos
Reported
2022-01-22 01:37:14 PST
We are returning early in case the object is ignored, but that could change, so if an object is not initially ignored and is registered we still need to emit children-changed:remove signal when destroyed to ensure the atspi cache is updated.
Attachments
Patch
(1.60 KB, patch)
2022-01-22 01:40 PST
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2022-01-22 01:40:46 PST
Created
attachment 449725
[details]
Patch
Carlos Garcia Campos
Comment 2
2022-01-24 08:19:40 PST
Committed
r288445
(?): <
https://commits.webkit.org/r288445
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug