[GTK][a11y] Emit children-changed:remove signal even for ignored objects with ATSPI https://bugs.webkit.org/show_bug.cgi?id=235472

Reviewed by Adrian Perez de Castro.

We are returning early in case the object is ignored, but that could change, so if an object is not initially
ignored and is registered we still need to emit children-changed:remove signal when destroyed to ensure the
atspi cache is updated.

* accessibility/atspi/AccessibilityObjectAtspi.cpp:
(WebCore::AccessibilityObjectAtspi::childRemoved):


Canonical link: https://commits.webkit.org/246334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288445 268f45cc-cd09-0410-ab3c-d52691b4dbfc